Repair spacing

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ h2 {
   font-family: 'Poppins' sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  margin: 0;
 }
 
 h3, 
@@ -121,7 +122,7 @@ h4{
   font-family: 'Poppins' sans-serif;
   margin: 20px 0;
   font-size: 1.125em;
-  font-weight:500;
+  font-weight: 500;
 }
 
 p {
@@ -167,6 +168,7 @@ address {
     flex-flow: row wrap;
     margin: 0;
    }
+   
 
    header figure {
     width: 60%;
